gcc/testsuite/rust/rustc/ui/invalid-self-argument/bare-fn-start.rs
fn a(&self) { }
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-note "" "" { target *-*-* } .-2 }
// { dg-note "" "" { target *-*-* } .-3 }

fn main() { }

